<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">enhancedCoffeeOrderingApp</string>
    <string name="name">Name</string>
    <string name="toppings">TOPPINGS :</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY :</string>
    <string name="inc">+</string>
    <string name="zero">0</string>
    <string name="dec">-</string>
    <string name="order">Order</string>
    <string name="whip_choc">Add Whipped cream and chocolate topping </string>
    <string name="whipped_Cream">Add whipped cream topping </string>
    <string name="Chocolate">Add chocolate topping </string>
    <string name="no_topping">No topping</string>
    <string name="order_summary_name">Name :  </string>
    <string name="order_summary_quantity">Quantity =</string>
    <string name="order_summary_total">Total : $</string>
    <string name="_thankyou">ThankYou!</string>
    <string name="toast_inc">You cannot have more than 100 coffees</string>
    <string name="toast_dec">You cannot have less than 1 coffee</string>
    <string name="coffee_order">Coffee order for</string>
    <string name="coffee_shop_name" />

</resources>
